codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_auto_review_permissions.snap
---
source: tui/src/status/tests.rs
assertion_line: 858
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────╮
│  >_ Whisply (v0.147.0-wsply.1)                                        │
│                                                                       │
│  Model:            gpt-5.1-codex-max (reasoning none, summaries auto) │
│  Model provider:   Whisply                                            │
│  Directory: [[workspace]]                                             │
│  Permissions:      Workspace (Approve for me)                         │
│  Agents.md:        <none>                                             │
│                                                                       │
│  Token usage:      0 total  (0 input + 0 output)                      │
│  Context window:   100% left (0 used / 272K)                          │
│  Limits:           data not available yet                             │
╰───────────────────────────────────────────────────────────────────────╯
